--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <div class="container">
             <h1>Ravikumar Amrutiya</h1>
             <h2>Python, Golang & DevOps Engineer</h2>
+            <p>Passionate about automation, scalable cloud infrastructure, and open-source contributions.</p>
         </div>
     </header>
     
@@ -28,13 +29,18 @@
             <h2>Work Experience</h2>
             <div class="job">
                 <h3>Staff Engineer | Persistent Systems</h3>
-                <p>Oct 2023 – Jan 2025</p>
+                <p>Oct 2023 – Jan 2025 (1 year 4 months)</p>
                 <p>Worked for Zendesk as a Full-Stack Developer, building Kubernetes-based operators in Golang.</p>
             </div>
             <div class="job">
                 <h3>Technical Lead | Maplelabs (Xoriant)</h3>
-                <p>Apr 2019 – Oct 2023</p>
+                <p>Apr 2019 – Oct 2023 (4 years 6 months)</p>
                 <p>Developed Secure Firewall Cloud Native solutions for Cisco, utilizing Kubernetes and Golang.</p>
+            </div>
+            <div class="job">
+                <h3>Software Engineer | KPIT Technologies</h3>
+                <p>Feb 2015 – Apr 2019 (4 years 2 months)</p>
+                <p>Led the Smart Wi-Fi-based Bus Entertainment System for MSRTC & KSRTC using Python, Linux, and IoT devices.</p>
             </div>
         </div>
     </section>
@@ -43,10 +49,22 @@
         <div class="container">
             <h2>Technical Skills</h2>
             <ul>
-                <li>Python, Golang, React</li>
-                <li>Docker, Kubernetes, Terraform</li>
-                <li>AWS, CI/CD, ArgoCD</li>
-                <li>Prometheus, Grafana</li>
+                <li>Programming Languages: Python, Golang, React</li>
+                <li>DevOps & Cloud: Docker, Kubernetes, Terraform, AWS</li>
+                <li>CI/CD: Jenkins, ArgoCD</li>
+                <li>Monitoring: Prometheus, Grafana</li>
+                <li>Database: MySQL, SQLite</li>
+            </ul>
+        </div>
+    </section>
+    
+    <section id="certifications">
+        <div class="container">
+            <h2>Certifications & Achievements</h2>
+            <ul>
+                <li>Embedded Systems Training – Vector Institute, Bangalore</li>
+                <li>Best Contribution to Product Success – KPIT Technologies</li>
+                <li>Excellence Award for Ownership & Consistency in Feature Release – Maplelabs</li>
             </ul>
         </div>
     </section>
